--- a/packages/discovery-styles/scss/components/document-preview/_simple-document.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_simple-document.scss
@@ -20,3 +20,31 @@
 .#{$prefix}--simple-document__content {
   max-width: 78ch;
 }
+
+$width: 500px;
+$icon-size: 80px;
+
+.#{$prefix}--simple-document__error-view {
+  width: $width;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.#{$prefix}--simple-document__error-view__icon {
+  display: inline-block;
+  width: $icon-size;
+  height: $icon-size;
+  margin-right: $spacing-lg;
+}
+
+.#{$prefix}--simple-document__error-view__header {
+  font-size: 1.25rem;
+  padding-bottom: $spacing-sm;
+  color: #171717; // primary text color in tooling
+}
+
+.#{$prefix}--simple-document__error-view__message {
+  font-size: 0.875rem;
+  color: #565656; // secondary text color in tooling
+}
