--- a/packages/discovery-styles/scss/components/document-preview/_simple-document.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_simple-document.scss
@@ -26,6 +26,8 @@ $icon-size: 80px;
 
 .#{$prefix}--simple-document__error-view {
   width: $width;
+  padding-top: 15vh;
+  padding-bottom: 15vh;
   display: flex;
   align-items: center;
   justify-content: center;
