--- a/packages/discovery-styles/scss/_vars.scss
+++ b/packages/discovery-styles/scss/_vars.scss
@@ -1,2 +1,4 @@
 $disco-highlight-background-with-opacity: scale-color($highlight, $lightness: -40%);
 $disco-highlight-background-opacity: 0.25;
+
+$empty_state_message_width: 500px;
