--- a/examples/discovery-search-app/src/app.scss
+++ b/examples/discovery-search-app/src/app.scss
@@ -9,6 +9,10 @@ $nav-toolbar-height: 42px;
   min-height: 100vh;
 }
 
+h1 {
+  font-weight: 400;
+}
+
 .#{$prefix}--search-app__nav-toolbar {
   background-color: $nav-toolbar-background-color;
   color: white;
@@ -116,17 +120,8 @@ $nav-toolbar-height: 42px;
     top: 0;
   }
 
-  .#{$prefix}--document-preview {
-    margin-top: $nav-toolbar-height;
-  }
-
   .#{$prefix}--preview-toolbar {
     top: $nav-toolbar-height;
-  }
-
-  .#{$prefix}--document-preview__document {
-    margin-top: $nav-toolbar-height;
-    padding: $spacing-xl;
   }
 
   .#{$prefix}--search-app__tabs {
@@ -139,7 +134,6 @@ $nav-toolbar-height: 42px;
 
   .#{$prefix}--search-app__content {
     min-height: 0;
-    height: 100vh;
     overflow-y: auto;
   }
 }
