--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -23,13 +23,17 @@
     height: $spacing-lg;
     margin-bottom: $spacing-xs;
     min-height: $spacing-lg;
+    padding: 0px;
+    transition: none;
     width: 100%;
     &:hover {
       background-color: $ui-01;
       text-decoration: none;
     }
     &:focus {
+      border: none;
       box-shadow: none;
+      outline: none;
     }
   }
 }
