--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -9,15 +9,15 @@
 }
 
 .#{$prefix}--search-facets {
-  .bx--search-facet--category {
-    .bx--search-facet--category--category-name {
+  .#{$prefix}--search-facet--category {
+    .#{$prefix}--search-facet--category--category-name {
       @include type-style('body-short-02');
       font-size: 0.875rem;
     }
     margin-bottom: $spacing-xs;
     padding-left: $spacing-baseline;
   }
-  .bx--search-facet--category--expand-collapse {
+  .#{$prefix}--search-facet--category--expand-collapse {
     background-color: $ui-01;
     color: $ui-05;
     height: $spacing-lg;
