feat: initial setup of modal triggering for at least 10 facet values

--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -8,6 +8,12 @@
   }
 }
 
+.#{$prefix}--search-facets--modal {
+  .#{$prefix}--modal-content {
+    height: 250px;
+  }
+}
+
 .#{$prefix}--search-facet {
   margin-bottom: $spacing-md;
   word-break: break-word;
