fix: carbon component dependency outside example app

--- a/packages/discovery-styles/scss/components/search-input/_search-input.scss
+++ b/packages/discovery-styles/scss/components/search-input/_search-input.scss
@@ -8,7 +8,7 @@
 }
 
 .#{$prefix}--search-autocompletion {
-  @include layer('overlay');
+  @include box-shadow;
   left: 0;
   position: absolute;
   right: 0;
