feat: showmore modal working with selection/deselection and save/cancel

--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.#{$prefix}--search-facets--modal {
+.#{$prefix}--search-facets__facet--show-more-modal {
   .#{$prefix}--modal-content {
     height: 250px;
   }
