feat: identify Top Entities facet values by Type (#115)
* feat: initially get it working for types to load in

* refactor: cleanup buildAggQuery & get addl agg info in ds

* test: add test to buildaggquery

* refactor: some cleanup

* refactor: some renaming and adding constants

* refactor: a few more renames

* refactor: only use structuredresponse to return agg query

* feat: check for enriched_ in field

* feat: initial setup of component for fieldfacetswithtype

* feat: get selection working for individ facetfieldswithtype

* feat: get category check selecting/unselecting all in category

* feat: get expand/collapse initially working

* feat: get collapsing/expanding and clearing working as expected

* feat: move fieldfacetscatgroup out into own comp

* feat: update expand/collapse and add some styles

* refactor: improve types, naming, comments

* refactor: use spacing, color, text themes in styles

* test: add initial tests for fieldfacetswithcategory

* test: add some more tests

* refactor: move category facet changes into fieldfacets

* refactor: clean up, reorganize tests, improve comments

* refactor: cleanup

* test: add waits to cypress tests to get them working again

* test: update cypress test

* refactor: a few more cleanup things

* fix: switch chevrons; reset expanded cats on new nlq

* fix: multiselect needs messages

* fix: should have single-select option for cat facets too

* test: update tests after merging in master with matching results

* refactor: initial PR comment updates

* test: add comments to help with readability longer tests

* refactor: make key required

* refactor: add typeguards; fix btn focus; unique key msg; improve icon

--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -8,6 +8,31 @@
   }
 }
 
+.#{$prefix}--search-facets {
+  .#{$prefix}--search-facet__category {
+    .#{$prefix}--search-facet__category--category-name {
+      @include type-style('body-short-02');
+      font-size: 0.875rem;
+    }
+    margin-bottom: $spacing-xs;
+    padding-left: $spacing-baseline;
+  }
+  .#{$prefix}--search-facet__category--expand-collapse {
+    background-color: $ui-01;
+    color: $ui-05;
+    height: $spacing-lg;
+    margin-bottom: $spacing-xs;
+    min-height: $spacing-lg;
+    padding: 0px;
+    transition: none;
+    width: 100%;
+    &:hover {
+      background-color: $ui-01;
+      text-decoration: none;
+    }
+  }
+}
+
 .#{$prefix}--search-facet {
   margin-bottom: $spacing-md;
   word-break: break-word;
