--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -11,7 +11,7 @@
 
 .#{$prefix}--search-facet__facet__show-more-modal {
   .#{$prefix}--modal-content {
-    height: 250px;
+    height: 40vh;
   }
 }
 
