fix: add styling to search bar

--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -12,6 +12,10 @@
 .#{$prefix}--search-facet__facet__show-more-modal {
   .#{$prefix}--modal-content {
     height: 40vh;
+    padding-right: $spacing-md;
+    .#{$prefix}--search {
+      padding-bottom: $spacing-xs;
+    }
   }
 }
 
