fix: move search bar into modal heading

--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -10,12 +10,16 @@
 }
 
 .#{$prefix}--search-facet__facet__show-more-modal {
+  .#{$prefix}--modal-header {
+    padding-right: $spacing-md;
+
+    .#{$prefix}--search {
+      padding-top: $spacing-xs;
+    }
+  }
+
   .#{$prefix}--modal-content {
     height: 40vh;
-    padding-right: $spacing-md;
-    .#{$prefix}--search {
-      padding-bottom: $spacing-xs;
-    }
   }
 }
 
