feat: Show more modal (#129)
* feat: initial setup of modal triggering for at least 10 facet values

* feat: move showmore modal out into own comp

* feat: showmore modal working with selection/deselection and save/cancel

* test: initial tests for showmore modal

* test: add more tests

* feat: get showmoremodal working with singleselect

* refactor: improve comments & conditionals

* refactor: make getFacetLabel its own util

* feat: add comments

* fix: updates after master merge; fix tests

* test: aria-label to fix test warning

* fix: update to show modal only greater than 10 values

* fix: bring in carbon modal styles

* style: use prefix setting

* test: update modal tests after merging in master

* feat: get showmoremodal working for categoryfacets

* feat: make showmorebutton its own comp

* test: add test for showmoremodal in entities categories

* feat: include categoryName in modalHeader if category

* refactor: address PR feedback

* docs: add radio button example for showmore to storybook

* test: wait on postquery for cypress tests

* refactor: more updates based on PR feedback

* fix: change modal apply text

* fix: update test to new modal text

* fix: text for opening modal is now show all

* fix: mutating prop and button function

* fix: changes based on feedback

* fix: create renderRadioButton function

* fix: add constants and fix showMoreButton

* fix: mutating props and unneed type declaration

* fix: shorten facetSelected modal check

* fix: remove cypress waits on tests

Co-authored-by: H-Fin <heatherkayfinnegan@gmail.com>

--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -1,10 +1,17 @@
 @import '~carbon-components/scss/components/checkbox/checkbox';
 @import '~carbon-components/scss/components/multi-select/multi-select';
 @import '~carbon-components/scss/components/radio-button/radio-button';
+@import '~carbon-components/scss/components/modal/modal';
 
 .#{$prefix}--search-facets__button-clear-all {
   .#{$prefix}--btn__icon {
     margin-left: $spacing-2xs;
+  }
+}
+
+.#{$prefix}--search-facet__facet__show-more-modal {
+  .#{$prefix}--modal-content {
+    height: 40vh;
   }
 }
 
