--- a/examples/discovery-search-app/src/app.scss
+++ b/examples/discovery-search-app/src/app.scss
@@ -42,6 +42,12 @@ h1 {
   justify-content: space-between;
   padding: $spacing-md;
 
+  .#{$prefix}--search-facet__facet__show-more-modal {
+    .#{$prefix}--btn {
+      padding-left: $spacing-md;
+    }
+  }
+
   .#{$prefix}--btn {
     padding-left: 0;
 
