feat: add search bar to facet modal (#131)
* feat: add search bar to search facet modal

* fix: add state to modal search

* fix: facets now filter

* fix: searchbar clears on modal exit

* fix: add tests

* fix: add rest of jest tests

* fix: add styling to search bar

* fix: clear search now works

* fix: add test for clearing search input

* fix: add constants and fix showMoreButton

* fix: mutating props and unneed type declaration

* fix: shorten facetSelected modal check

* fix: design copy feedback

* fix: move search bar into modal heading

* fix: update tests for new copy

* feat: add search bar to search facet modal

* fix: add state to modal search

* fix: facets now filter

* fix: searchbar clears on modal exit

* fix: add tests

* fix: add rest of jest tests

* fix: add styling to search bar

* fix: clear search now works

* fix: add test for clearing search input

* fix: design copy feedback

* fix: move search bar into modal heading

* fix: update tests for new copy

* fix: add constant value

--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -10,6 +10,14 @@
 }
 
 .#{$prefix}--search-facet__facet__show-more-modal {
+  .#{$prefix}--modal-header {
+    padding-right: $spacing-md;
+
+    .#{$prefix}--search {
+      padding-top: $spacing-xs;
+    }
+  }
+
   .#{$prefix}--modal-content {
     height: 40vh;
   }
