--- a/packages/discovery-react-components/.storybook/styles.scss
+++ b/packages/discovery-react-components/.storybook/styles.scss
@@ -1,3 +1,2 @@
-// TODO import from @ibm-watson/discovery-styles. Just lazy and didn't feel like npm linking
-@import '../../../packages/discovery-styles/scss/global-carbon-styles';
-@import '../../../packages/discovery-styles/scss';
+@import '~@ibm-watson/discovery-styles/scss/global-carbon-styles';
+@import '~@ibm-watson/discovery-styles/scss/index';
