--- a/packages/discovery-styles/scss/index.scss
+++ b/packages/discovery-styles/scss/index.scss
@@ -1,29 +1,3 @@
-$css--plex: true !default;
-$css--use-layer: true !default;
-
-// Global styles
-@import '~carbon-components/scss/globals/scss/_css--font-face.scss';
-@import '~carbon-components/scss/globals/scss/_typography.scss';
-@import '~carbon-components/scss/globals/scss/_colors.scss';
-@import '~carbon-components/scss/globals/scss/_layout.scss';
-
 // Component styles
-@import 'components/search-input/search-input';
-@import 'components/search-results/search-results';
-@import 'components/search-facets/search-facets';
-@import 'components/results-pagination/results-pagination';
-@import 'components/document-preview/document-preview';
-@import 'components/document-preview/document-preview-toolbar';
-@import 'components/document-preview/document-preview-pdf-fallback';
-@import 'components/document-preview/document-preview-pdf-viewer';
-@import 'components/document-preview/document-preview-html';
-@import 'components/document-preview/simple-document';
-@import 'components/ci-document/ci-document-content';
-@import 'components/ci-document/ci-document-details';
-@import 'components/ci-document/ci-document-filter';
-@import 'components/ci-document/ci-document-metadata-pane';
-@import 'components/ci-document/ci-document-section';
-@import 'components/ci-document/ci-document-toolbar';
-@import 'components/ci-document/ci-document-virtual-scroll';
-@import 'components/ci-document/ci-document';
-@import 'components/structured-query/structured-query';
+@import 'carbon-components';
+@import 'discovery-components';
