--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -1,6 +1,6 @@
 .#{$prefix}--search-facets__button-clear-all {
   .#{$prefix}--btn__icon {
-    margin-left: $spacing-2xs;
+    margin-left: $spacing-02;
   }
 }
 
