--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
@@ -14,9 +14,9 @@
   }
 
   .resetButton {
-    padding: $spacing-2xs;
+    padding: $spacing-02;
     min-height: 0;
-    margin-top: $spacing-2xs;
+    margin-top: $spacing-02;
     margin-left: $spacing-lg;
     outline: none;
     border: none;
@@ -51,7 +51,7 @@
     font-weight: bold;
     color: $text-02;
     line-height: 1rem;
-    margin-bottom: $spacing-2xs;
+    margin-bottom: $spacing-02;
   }
 
   .bx--form-item.bx--checkbox-wrapper {
@@ -59,7 +59,7 @@
   }
 
   .bx--radio-button-wrapper {
-    margin: $spacing-2xs 0;
+    margin: $spacing-02 0;
     justify-content: left;
     align-items: flex-start;
   }
@@ -77,6 +77,6 @@
   }
 
   .count {
-    margin-left: $spacing-2xs;
+    margin-left: $spacing-02;
   }
 }
