refactor: spacing-xs

--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-details.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-details.scss
@@ -39,7 +39,7 @@
   }
 
   .content {
-    margin-bottom: $spacing-xs;
+    margin-bottom: $spacing-03;
 
     &:last-child {
       margin-bottom: 0;
