--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-details.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-details.scss
@@ -27,7 +27,7 @@
   .sectionHeader {
     font-size: 0.75rem;
     font-weight: bold;
-    margin-bottom: $spacing-sm;
+    margin-bottom: $spacing-04;
   }
 
   .selected {
