--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
@@ -40,7 +40,7 @@
   }
 
   .group {
-    padding: $spacing-sm $spacing-lg;
+    padding: $spacing-04 $spacing-lg;
 
     &:not(:first-child) {
       border-top: 1px solid $ui-03;
