--- a/packages/discovery-styles/scss/components/document-preview/_simple-document.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_simple-document.scss
@@ -41,7 +41,7 @@ $icon-size: 80px;
 
 .#{$prefix}--simple-document__error-view__header {
   font-size: 1.25rem;
-  padding-bottom: $spacing-sm;
+  padding-bottom: $spacing-04;
   color: $gray-100;
 }
 
