--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-details.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-details.scss
@@ -11,16 +11,16 @@
 
   .title {
     font-weight: bold;
-    padding: $spacing-md;
+    padding: $spacing-05;
   }
 
   .nothingSelected {
-    padding-left: $spacing-md;
+    padding-left: $spacing-05;
     color: $text-02;
   }
 
   .section {
-    padding: $spacing-md;
+    padding: $spacing-05;
     border-top: 1px solid $ui-03;
   }
 
