--- a/packages/discovery-styles/scss/components/ci-document/_ci-document.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document.scss
@@ -15,7 +15,7 @@
     background-color: $ui-01;
 
     .#{$prefix}--ci-doc__title {
-      padding: 0 $spacing-md;
+      padding: 0 $spacing-05;
       font-size: 1.2em;
       line-height: 2;
       display: inline-block;
