--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
@@ -52,5 +52,5 @@ input[type='number'] {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-right: $spacing-md;
+  margin-right: $spacing-05;
 }
