--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-content.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-content.scss
@@ -6,6 +6,6 @@
   }
 
   .ReactVirtualized__Grid__innerScrollContainer {
-    margin: 0 $spacing-md $layout-xl;
+    margin: 0 $spacing-05 $layout-xl;
   }
 }
