--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-section.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-section.scss
@@ -40,7 +40,7 @@
       @include carbon--type-style('body-long-02');
 
       font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
-      margin-bottom: $spacing-md;
+      margin-bottom: $spacing-05;
     }
   }
 }
