--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-toolbar.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-toolbar.scss
@@ -8,7 +8,7 @@
 
   .button {
     padding: 0;
-    margin: 0 $spacing-md 0 $spacing-md;
+    margin: 0 $spacing-05 0 $spacing-05;
     height: 100%;
 
     .#{$prefix}--btn__icon {
