refactor: spacing-lg

--- a/examples/discovery-search-app/src/app.scss
+++ b/examples/discovery-search-app/src/app.scss
@@ -35,7 +35,7 @@ h1 {
   background-color: $search-app-background-color;
   max-height: 1500px;
   max-width: 1200px;
-  padding: $spacing-lg $spacing-lg 0 $spacing-lg;
+  padding: $spacing-06 $spacing-06 0 $spacing-06;
 }
 
 .#{$prefix}--search-app__facets-and-results {
