--- a/packages/discovery-styles/scss/components/document-preview/_simple-document.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_simple-document.scss
@@ -36,7 +36,7 @@ $icon-size: 80px;
   display: inline-block;
   width: $icon-size;
   height: $icon-size;
-  margin-right: $spacing-lg;
+  margin-right: $spacing-06;
 }
 
 .#{$prefix}--simple-document__error-view__header {
