--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
@@ -10,14 +10,14 @@
   .filterTitle {
     font-weight: normal;
     line-height: 1.3;
-    padding: $spacing-lg $spacing-lg 0;
+    padding: $spacing-06 $spacing-06 0;
   }
 
   .resetButton {
     padding: $spacing-02;
     min-height: 0;
     margin-top: $spacing-02;
-    margin-left: $spacing-lg;
+    margin-left: $spacing-06;
     outline: none;
     border: none;
     background-color: initial;
@@ -40,7 +40,7 @@
   }
 
   .group {
-    padding: $spacing-04 $spacing-lg;
+    padding: $spacing-04 $spacing-06;
 
     &:not(:first-child) {
       border-top: 1px solid $ui-03;
