--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-metadata-pane.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-metadata-pane.scss
@@ -1,9 +1,9 @@
 .#{$prefix}--ci-doc-metadata {
   .section {
-    padding: $spacing-04 $spacing-lg;
+    padding: $spacing-04 $spacing-06;
 
     &:first-child {
-      padding-top: $spacing-lg;
+      padding-top: $spacing-06;
     }
 
     &:not(:first-child) {
@@ -11,7 +11,7 @@
     }
 
     &:last-child {
-      padding-bottom: $spacing-lg;
+      padding-bottom: $spacing-06;
     }
   }
 
