--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -30,9 +30,9 @@
   .#{$prefix}--search-facet__category--expand-collapse {
     background-color: $ui-01;
     color: $ui-05;
-    height: $spacing-lg;
+    height: $spacing-06;
     margin-bottom: $spacing-03;
-    min-height: $spacing-lg;
+    min-height: $spacing-06;
     padding: 0px;
     transition: none;
     width: 100%;
