refactor: spacing-xl

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
@@ -22,7 +22,7 @@
 .#{$prefix}--preview-toolbar__input {
   text-align: center;
   max-width: $layout-lg;
-  height: $spacing-xl;
+  height: $spacing-07;
 }
 
 // removes number wheel buttons from input (chrome and safari)
