--- a/packages/discovery-styles/scss/components/search-results/_search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/_search-results.scss
@@ -88,7 +88,7 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
   flex-grow: 2;
   max-height: $result-element-max-height;
   overflow: hidden;
-  padding-right: $spacing-xl;
+  padding-right: $spacing-07;
   position: relative;
 }
 
