--- a/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
+++ b/packages/discovery-styles/scss/components/structured-query/_structured-query.scss
@@ -17,7 +17,7 @@
 }
 
 .#{$prefix}--structured-query__rule-group--nested {
-  padding-left: $spacing-xl;
+  padding-left: $spacing-07;
 }
 
 .#{$prefix}--structured-query__rules {
