refactor: spacing-2xl

--- a/examples/discovery-search-app/src/app.scss
+++ b/examples/discovery-search-app/src/app.scss
@@ -68,7 +68,7 @@ h1 {
 .#{$prefix}--search-app__facets-and-results__results {
   max-height: 100vh;
   overflow: auto;
-  padding-bottom: $spacing-2xl;
+  padding-bottom: $spacing-08;
 }
 
 .#{$prefix}--search-app__facets-and-results__facets {
