--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   background-color: #eaeaea;
-  height: $spacing-2xl;
+  height: $spacing-08;
 }
 
 .#{$prefix}--preview-toolbar__nav {
