--- a/packages/discovery-styles/scss/components/search-results/_search-results.scss
+++ b/packages/discovery-styles/scss/components/search-results/_search-results.scss
@@ -58,7 +58,7 @@ $result-table-fade-offset: calc(#{$result-element-max-height} - #{$result-table-
 }
 
 .#{$prefix}--toggle__switch {
-  margin: $spacing-03 $spacing-2xl $spacing-03 $spacing-03;
+  margin: $spacing-03 $spacing-08 $spacing-03 $spacing-03;
 }
 
 .#{$prefix}--toggle-input__label {
