--- a/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
@@ -13,7 +13,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  margin: $spacing-2xl;
+  margin: $spacing-08;
   margin-top: $layout-lg;
   background-color: white;
 }
@@ -29,5 +29,5 @@
 
 .#{$prefix}--document-preview__error {
   text-align: center;
-  margin: $spacing-2xl;
+  margin: $spacing-08;
 }
