--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-content.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-content.scss
@@ -2,7 +2,7 @@
   height: 100%;
 
   &.skeleton {
-    padding: $spacing-3xl;
+    padding: $spacing-09;
   }
 
   .ReactVirtualized__Grid__innerScrollContainer {
