--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-virtual-scroll.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-virtual-scroll.scss
@@ -1,6 +1,6 @@
 .#{$prefix}--ci-doc-virtual-scroll {
   .ReactVirtualized__Grid {
-    padding: $spacing-3xl;
+    padding: $spacing-09;
   }
 
   .ReactVirtualized__Grid__innerScrollContainer {
