--- a/packages/discovery-styles/scss/components/ci-document/_ci-document.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document.scss
@@ -8,8 +8,8 @@
     width: 100%;
     flex: 0 0 auto;
     display: flex;
-    height: $spacing-3xl;
-    min-height: $spacing-3xl;
+    height: $spacing-09;
+    min-height: $spacing-09;
     align-items: center;
     justify-content: space-between;
     background-color: $ui-01;
