--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-filter.scss
@@ -1,6 +1,6 @@
 .#{$prefix}--ci-doc-filter {
   &.skeletons {
-    padding: $spacing-md;
+    padding: $spacing-05;
   }
 
   * {
@@ -10,14 +10,14 @@
   .filterTitle {
     font-weight: normal;
     line-height: 1.3;
-    padding: $spacing-lg $spacing-lg 0;
+    padding: $spacing-06 $spacing-06 0;
   }
 
   .resetButton {
-    padding: $spacing-2xs;
+    padding: $spacing-02;
     min-height: 0;
-    margin-top: $spacing-2xs;
-    margin-left: $spacing-lg;
+    margin-top: $spacing-02;
+    margin-left: $spacing-06;
     outline: none;
     border: none;
     background-color: initial;
@@ -40,7 +40,7 @@
   }
 
   .group {
-    padding: $spacing-sm $spacing-lg;
+    padding: $spacing-04 $spacing-06;
 
     &:not(:first-child) {
       border-top: 1px solid $ui-03;
@@ -51,7 +51,7 @@
     font-weight: bold;
     color: $text-02;
     line-height: 1rem;
-    margin-bottom: $spacing-2xs;
+    margin-bottom: $spacing-02;
   }
 
   .bx--form-item.bx--checkbox-wrapper {
@@ -59,7 +59,7 @@
   }
 
   .bx--radio-button-wrapper {
-    margin: $spacing-2xs 0;
+    margin: $spacing-02 0;
     justify-content: left;
     align-items: flex-start;
   }
@@ -77,6 +77,6 @@
   }
 
   .count {
-    margin-left: $spacing-2xs;
+    margin-left: $spacing-02;
   }
 }
