--- a/packages/discovery-styles/scss/components/ci-document/_ci-document-virtual-scroll.scss
+++ b/packages/discovery-styles/scss/components/ci-document/_ci-document-virtual-scroll.scss
@@ -1,9 +1,9 @@
 .#{$prefix}--ci-doc-virtual-scroll {
   .ReactVirtualized__Grid {
-    padding: $spacing-3xl;
+    padding: $spacing-09;
   }
 
   .ReactVirtualized__Grid__innerScrollContainer {
-    margin: 0 $spacing-md $layout-xl;
+    margin: 0 $spacing-05 $layout-xl;
   }
 }
