feat: allow sample app to load projects

--- a/examples/discovery-search-app/src/app.scss
+++ b/examples/discovery-search-app/src/app.scss
@@ -1,5 +1,6 @@
 @import '~carbon-components/scss/globals/grid/grid';
 @import '~carbon-components/scss/components/tabs/tabs';
+@import '~carbon-components/scss/components/loading/loading';
 $search-app-background-color: $gray-10;
 $nav-toolbar-background-color: $black-100;
 $nav-toolbar-height: 42px;
