fix: use newer "unstable" Pagination component
... which allows us to not use a page select control

--- a/packages/discovery-styles/scss/components/results-pagination/_results-pagination.scss
+++ b/packages/discovery-styles/scss/components/results-pagination/_results-pagination.scss
@@ -1,5 +1,5 @@
 .#{$prefix}--pagination__page-size-selector--hidden {
-  .#{$prefix}--pagination__left {
+  .#{$prefix}--unstable-pagination__left {
     padding: 0;
 
     label,
