--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -1,3 +1,61 @@
 .#{$prefix}--document-preview-pdf-viewer {
+  position: relative;
+}
+
+.#{$prefix}--document-preview-pdf-viewer--canvas {
   transform-origin: left top 0px;
+}
+
+.#{$prefix}--document-preview-pdf-viewer--text {
+  transform-origin: left top 0px;
+
+  //
+  // NOTE: import textLayer styles from ~pdfjs-dist/web/pdf_viewer.css
+  // @import "~pdfjs-dist/web/pdf_viewer" doesn't work for loading image
+  //
+  &.textLayer {
+    position: absolute;
+    text-align: initial;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    opacity: 0.2;
+    line-height: 1;
+  }
+
+  &.textLayer span,
+  &.textLayer br {
+    color: transparent;
+    position: absolute;
+    white-space: pre;
+    cursor: text;
+    transform-origin: 0% 0%;
+  }
+
+  &.textLayer ::selection {
+    background: rgba(0, 0, 255, 1);
+  }
+
+  /* Avoids https://github.com/mozilla/pdf.js/issues/13840 in Chrome */
+  &.textLayer br::selection {
+    background: transparent;
+  }
+
+  &.textLayer .endOfContent {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    cursor: default;
+    user-select: none;
+  }
+
+  &.textLayer .endOfContent.active {
+    top: 0;
+  }
 }
