--- a/packages/discovery-styles/scss/components/document-preview/_pdfjs_web_mixins.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_pdfjs_web_mixins.scss
@@ -1,7 +1,7 @@
 @mixin pdfjsTextLayer {
   // CSS from ~pdfjs-dist/web/pdf_viewer.css for scoped style
 
-  // BEGIN-QUOTE --- awk '/^\/\*/,/\*\//'
+  // BEGIN-QUOTE COMMENT
   /* Copyright 2014 Mozilla Foundation
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,9 +16,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-  // END-QUOTE
+  // END-QUOTE COMMENT
 
-  // BEGIN-QUOTE --- awk '/^\.textLayer/,/}/'
+  // BEGIN-QUOTE TEXT-LAYER
   .textLayer {
     position: absolute;
     left: 0;
@@ -79,5 +79,5 @@
   .textLayer .endOfContent.active {
     top: 0px;
   }
-  // END-QUOTE
+  // END-QUOTE TEXT-LAYER
 } // end mixin
