--- a/packages/discovery-react-components/src/components/DocumentPreview/components/PdfViewerHighlight/PdfViewerWithHighlight.stories.scss
+++ b/packages/discovery-react-components/src/components/DocumentPreview/components/PdfViewerHighlight/PdfViewerWithHighlight.stories.scss
@@ -1,10 +1,13 @@
+// Carbon highlight color for white theme
+// https://www.carbondesignsystem.com/guidelines/color/usage/
+$highlight: #d0e2ff;
+
 .withTextSelection {
   display: flex;
-  height: 800px;
 
   .rightPane {
-    flex: 1 1 auto;
-    width: 20%;
+    flex: 1 1 30%;
+    height: 100vh;
     overflow-y: scroll;
 
     p {
@@ -19,7 +22,7 @@
   }
 
   .highlight {
-    opacity: 0.4;
-    background: rgba(255, 64, 128, 1);
+    opacity: 0.3;
+    background: darken($highlight, 30%);
   }
 }
