--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -1,4 +1,6 @@
 @import './pdfjs_web_mixins';
+@import '../../vars';
+@import './mixins';
 
 .#{$prefix}--document-preview-pdf-viewer {
   position: relative;
@@ -22,6 +24,6 @@
 
 .#{$prefix}--document-preview-pdf-viewer-highlight--item {
   position: absolute;
-  opacity: 0.5;
-  background: rgba(0, 0, 255, 1);
+  opacity: 0.3;
+  background: darken($highlight, 30%);
 }
