--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-toolbar.scss
@@ -6,6 +6,10 @@
   height: $spacing-08;
 }
 
+.#{$prefix}--preview-toolbar__hidden {
+  display: none;
+}
+
 .#{$prefix}--preview-toolbar__nav {
   display: flex;
   flex: 0 0 auto;
