fix: add missing styles for Carbon Tag component

--- a/packages/discovery-styles/scss/carbon-components.scss
+++ b/packages/discovery-styles/scss/carbon-components.scss
@@ -18,6 +18,7 @@ $css--use-layer: true !default;
 @import '~carbon-components/scss/components/checkbox/checkbox';
 @import '~carbon-components/scss/components/multi-select/multi-select';
 @import '~carbon-components/scss/components/radio-button/radio-button';
+@import '~carbon-components/scss/components/tag/tag';
 
 // ci-document, ci-document-details
 @import '~carbon-components/scss/components/link/link';
